--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obj2fs-hooks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A set of hooks that can be injected into your functional components to enhance their behavior. Specifically, to make these components persistable to file system as JSON strings.",
   "main": "lib/obj2fs-hooks.js",
   "scripts": {
@@ -15,7 +15,11 @@
     "persist",
     "storage",
     "file system",
-    "HOC"
+    "serializable",
+    "Json2Object",
+    "hooks",
+    "stringify",
+    "parse"
   ],
   "author": "Dmitry Amelchenko <dmitry@echowaves.com>",
   "license": "MIT",
